[package]
name = "SSH_CMD_Execution_Lib"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }  # ✅ FIXED
rpassword = "7.3.1"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }

[lib]
name = "SSH_CMD_Execution_Lib"    # Change this to your actual library name
crate-type = ["cdylib"]  # This tells Rust to build a dynamic library (.dll)
